Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86851

QQC2 Menu contentModel not deleted

    XMLWordPrintable

Details

    • f12e2061c460504d6db1d1370e97b5eeead9c7bf (qt/qtquickcontrols2/dev) 68a916d8ec4ff964bb1310b4065494e9e041499e (qt/qtquickcontrols2/5.15)

    Description

      QQC2 Menu contentModel doesn't seem to be ever deleted.

      Steps to reproduce the issue:

      1. Run the attached example

      Attachments

        Activity

          People

            mitch_curtis Mitch Curtis
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: